--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
   <div id="energy-value">Energy: 100</div>
   <div id="energy-bar" style="width: 100%; height: 20px; background: green;"></div>
 
+
+  <h2>Normal Energy</h2>
+  <div id="normal-energy-value">Energy: 100</div>
+  <div id="normal-energy-bar" style="width: 100%; height: 20px; background: gray;"></div>
+
+
+  <!-- When energy for T1D hits zero, this -->
+  <div id="cutoff-message" style="margin-top: 1rem; font-weight: bold;"></div>
+
+
+
   <button id="restart-day">Restart Day</button>
 
 
