just added inter, my eyes hurt

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-  <h1>Type 1 Diabetes Daily Task Tracker</h1>
+  <h1>Surviving Isn’t the Same as Living</h1>
+  <h2>It’s Just a Shower. Unless You Have T1D.</h2>
 
   <div id="task-buttons">
     <!-- Buttons for different daily tasks -->
@@ -18,15 +19,15 @@
     <button data-task="Take a Shower">Take a Shower</button>
   </div>
 
-  <h2>Energy Bar</h2>
-  <div id="energy-value">Energy: 100</div>
-  <div id="energy-bar" style="width: 100%; height: 20px; background: green;"></div>
-
+  
 
   <h2>Normal Energy</h2>
   <div id="normal-energy-value">Energy: 100</div>
   <div id="normal-energy-bar" style="width: 100%; height: 20px; background: gray;"></div>
 
+  <h2>Diabetic Energy Bar</h2>
+  <div id="energy-value">Energy: 100</div>
+  <div id="energy-bar" style="width: 100%; height: 20px; background: green;"></div>
 
   <!-- When energy for T1D hits zero, this -->
   <div id="cutoff-message" style="margin-top: 1rem; font-weight: bold;"></div>
