added some copy :)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
 
-  <h1>Surviving Isn’t the Same as Living</h1>
-  <h2>It’s Just a Shower. Unless You Have T1D.</h2>
+
+  <h1><strong>Same tasks. Different toll.</strong></h1>
+    <p>Experience what daily life feels like with Type 1 Diabetes.</p>
+
+        <p>
+        This isn’t just a tracker. It’s a simulation of invisible labor. <br />
+        See how energy gets drained by simple things - and how chronic conditions quietly change everything.
+        </p>
 
   <div id="task-buttons">
     <!-- Buttons for different daily tasks -->
