added entry and exit modals

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +16,30 @@
         This isn’t just a tracker. It’s a simulation of invisible labor. <br />
         See how energy gets drained by simple things - and how chronic conditions quietly change everything.
         </p>
+
+
+
+<!-- entry modal -->
+        <div id="entryModal" class="modal">
+            <div class="modal-content">
+              <span class="close" id="closeEntry">&times;</span>
+              <h2>Experience a simulation</h2>
+              <p>Living with a chronic condition is an invisible battle.<br>What's the trade-off?</p>
+              <button id="startSimulation">Enter the experience</button>
+            </div>
+          </div>
+          
+
+<!-- exit modal -->
+<div id="exitModal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="closeExit">&times;</span>
+      <h2>SYSTEM CRASH</h2>
+      <p>You ran out of energy by 11:00 AM.<br>A non-diabetic person still had 65% left.</p>
+      <button id="resetExperience">Start Over</button>
+    </div>
+  </div>
+  
 
   <div id="task-buttons">
     <!-- Buttons for different daily tasks -->
