added UI to desktop

--- a/index.html
+++ b/index.html
@@ -1,78 +1,83 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>T1D Energy Tracker</title>
+  <title>T1D Simulation Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
 
-
-  <h1><strong>Same tasks. Different toll.</strong></h1>
-    <p>Experience what daily life feels like with Type 1 Diabetes.</p>
-
-        <p>
-        This isn’t just a tracker. It’s a simulation of invisible labor. <br />
-        See how energy gets drained by simple things - and how chronic conditions quietly change everything.
-        </p>
-
-
-
-<!-- entry modal -->
-        <div id="entryModal" class="modal">
-            <div class="modal-content">
-              <span class="close" id="closeEntry">&times;</span>
-              <h2>Experience a simulation</h2>
-              <p>Living with a chronic condition is an invisible battle.<br>What's the trade-off?</p>
-              <button id="startSimulation">Enter the experience</button>
-            </div>
-          </div>
-          
-
-<!-- exit modal -->
-<div id="exitModal" class="modal">
+  <!-- ENTRY MODAL -->
+  <div id="entryModal" class="modal">
     <div class="modal-content">
-      <span class="close" id="closeExit">&times;</span>
+      <span id="closeEntry" class="close">&times;</span>
+      <h2>Experience a simulation</h2>
+      <p>Living with a chronic condition is an invisible battle.<br>What's the trade-off?</p>
+      <button id="startSimulation">Enter the experience</button>
+    </div>
+  </div>
+
+  <!-- EXIT MODAL -->
+  <div id="exitModal" class="modal">
+    <div class="modal-content">
+      <span id="closeExit" class="close">&times;</span>
       <h2>SYSTEM CRASH</h2>
-      <p>You ran out of energy by 11:00 AM.<br>A non-diabetic person still had 65% left.</p>
+      <p id="cutoff-message"></p>
       <button id="resetExperience">Start Over</button>
     </div>
   </div>
-  
 
-  <div id="task-buttons">
-    <!-- Buttons for different daily tasks -->
-    <button data-task="Waking up">Waking up</button>
-    <button data-task="Eat Breakfast">Eat Breakfast</button>
-    <button data-task="Grocery Shopping">Grocery Shopping</button>
-    <button data-task="Go to Class/Work">Go to Class/Work</button>
-    <button data-task="Take a Shower">Take a Shower</button>
-  </div>
+  <!-- SYSTEM HEADER / META BAR -->
+  <section id="meta-bar">
+    <div id="session-info">SESSION_04 | T1D SIM</div>
+    <div id="meta-stats">
+      <span id="sim-time">Time: 9:00AM</span>
+      <span id="glucose-level">Glucose: 146 mg/dL</span>
+      <span id="tasks-done">Tasks: 0/5</span>
+      <span id="breakdown">Breakdown: Slight fatigue</span>
+    </div>
+  </section>
 
-  
+  <!-- HEADLINE -->
+  <header>
+    <h1>Same tasks. Different toll.</h1>
+  </header>
 
-  <h2>Normal Energy</h2>
-  <div id="normal-energy-value">Energy: 100</div>
-  <div id="normal-energy-bar" style="width: 100%; height: 20px; background: gray;"></div>
+  <!-- ENERGY DISPLAY -->
+  <section id="energy-section">
+    <div class="energy-block">
+      <label>Normal</label>
+      <div id="normal-energy-value">Energy: 100</div>
+      <div id="normal-energy-bar"></div>
+    </div>
+    <div class="energy-block">
+      <label>Diabetic</label>
+      <div id="energy-value">Energy: 100</div>
+      <div id="energy-bar"></div>
+    </div>
+  </section>
 
-  <h2>Diabetic Energy Bar</h2>
-  <div id="energy-value">Energy: 100</div>
-  <div id="energy-bar" style="width: 100%; height: 20px; background: green;"></div>
+  <!-- TASK TIMELINE -->
+  <section id="task-section">
+    <div id="task-buttons">
+      <button data-task="Waking up">9:00AM — Waking up</button>
+      <button data-task="Eat Breakfast">10:00AM — Eat Breakfast</button>
+      <button data-task="Grocery Shopping">11:00AM — Grocery Shopping</button>
+      <button data-task="Go to Class/Work">1:00PM — Go to Class/Work</button>
+      <button data-task="Take a Shower">2:00PM — Take a Shower</button>
+    </div>
+  </section>
 
-  <!-- When energy for T1D hits zero, this -->
-  <div id="cutoff-message" style="margin-top: 1rem; font-weight: bold;"></div>
+  <!-- FEEDBACK PILLS -->
+  <section id="feedback-section">
+    <h2>System Feedback</h2>
+    <div id="feedback"></div>
+  </section>
 
+  <!-- HIDDEN but required for JS reset logic -->
+  <button id="restart-day" style="display:none;"></button>
 
-
-  <button id="restart-day">Restart Day</button>
-
-
-  <h2>Feedback</h2>
-  <div id="feedback"></div>
-
-
-  <!-- Adding JS file in the end so it interacts with HTML first  -->
   <script src="script.js"></script>
 </body>
 </html>
