added viewport tag and some responsiveness

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>T1D Simulation Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=IBM+Plex+Mono&display=swap" rel="stylesheet">
@@ -35,13 +36,14 @@
       <span id="sim-time">Time: 9:00AM</span>
       <span id="glucose-level">Glucose: 146 mg/dL</span>
       <span id="tasks-done">Tasks: 0/5</span>
-      <span id="breakdown">Breakdown: Slight fatigue</span>
+      <span id="breakdown">Breakdown: Crying for help</span>
     </div>
   </section>
 
   <!-- HEADLINE -->
   <header>
     <h1>Same tasks. Different toll.</h1>
+    <p>Experience what daily life feels like with Type 1 Diabetes.</p>
   </header>
 
   <!-- ENERGY DISPLAY -->
