--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- SYSTEM HEADER / META BAR -->
   <section id="meta-bar">
-    <div id="session-info">SESSION_04 | T1D SIM</div>
+    <div id="session-info">SESSION_04_SHAM | T1D SIM</div>
     <div id="meta-stats">
       <span id="sim-time">Time: 9:00AM</span>
       <span id="glucose-level">Glucose: 146 mg/dL</span>
