--- a/index.html
+++ b/index.html
@@ -80,6 +80,34 @@
   <!-- HIDDEN but required for JS reset logic -->
   <button id="restart-day" style="display:none;"></button>
 
+
+
+
+  <!-- Footer -->
+  <footer id="system-footer">
+    <div class="footer-top">
+      <div class="footer-link-block">
+        <p class="footer-link-label">Know more about Type 1 Diabetes →</p>
+        <a href="https://beyondtype1.org/type-1-diabetes/" target="_blank" class="footer-link-desc">
+          Learn about invisible labor and the quiet toll of chronic illness.
+        </a>
+      </div>
+  
+      <div class="footer-about-block">
+        <h1>Why I made this</h1>
+        <p>
+          This isn't just a project. It's a simulation of empathy. Living with a chronic condition is a constant background process — one you never signed up for, but must manage every day. I wanted to make that invisible toll visible. To show that it's not just the tasks that take energy — it's everything around them.
+        </p>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>With thanks to Michael and Eric — your belief shaped this system more than you'll know.</p>
+      <p class="footer-signoff">Type and Interaction | Capstone 2025&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Signing out, Sham</p>
+    </div>
+  </footer>
+  
+
   <script src="script.js"></script>
 </body>
 </html>
