energy bar value fixed, 50-50 split b/w the two, tasks and breakdown moved inside simulation

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div id="meta-stats">
       <span id="sim-time">Time: 9:00AM</span>
       <span id="glucose-level">Glucose: 146 mg/dL</span>
-      <span id="tasks-done">Tasks: 0/5</span>
-      <span id="breakdown">Breakdown: Crying for help</span>
+      <!-- <span id="tasks-done">Tasks: 0/5</span> -->
+      <!-- <span id="breakdown">Breakdown: Crying for help</span> -->
     </div>
   </section>
 
@@ -61,12 +61,19 @@
         </div>
   </section>
 
+  <div id="status-block">
+    <span id="tasks-done">Tasks: 0/5</span>
+    <span id="breakdown">Breakdown: Crying for help</span>
+  </div>
+  
+  
 
 <!-- Making timeline and feedback side by side on desktop -->
 
 <section id="response-block">
   <!-- TASK TIMELINE -->
   <section id="task-section">
+    <h2 id="tasks-heading">Choose a Daily Task</h2>
     <div id="task-buttons">
       <button data-task="Waking up">9:00AM — Waking up</button>
       <button data-task="Eat Breakfast">10:00AM — Eat Breakfast</button>
