added tasks and breakdown only for diabetic energy bar as a pill

--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
           <label>Diabetic</label>
           <div id="energy-value">Energy: 100</div>
           <div id="energy-bar"></div>
+          <div id="status-block">
+            <span id="tasks-done">Tasks: 0/5</span>
+            <span id="breakdown">Breakdown: Crying for help</span>
+          </div>
         </div>
   </section>
 
-  <div id="status-block">
+  <!-- <div id="status-block">
     <span id="tasks-done">Tasks: 0/5</span>
     <span id="breakdown">Breakdown: Crying for help</span>
-  </div>
+  </div> -->
   
   
 
