changed modal entry copy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="modal-content">
       <span id="closeEntry" class="close">&times;</span>
       <h2>Experience a simulation</h2>
-      <p>Living with a chronic condition is an invisible battle.<br>What's the trade-off?</p>
+      <p>Living with Type 1 Diabetes means doing everything others do — with half the fuel.<br>
+        Tasks look the same. The toll doesn’t.<br>What's the trade-off?</p>
       <button id="startSimulation">Enter the experience</button>
     </div>
   </div>
