--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="footer-link-block">
         <p class="footer-link-label">Know more about Type 1 Diabetes →</p>
         <a href="https://beyondtype1.org/type-1-diabetes/" target="_blank" class="footer-link-desc">
-          Learn about invisible labor and the quiet toll of chronic illness.
+          Learn about invisible labor and the quiet toll of chronic illness. →
         </a>
       </div>
   
