made energy bar lengths the same and added a spacer to make bars align on desktop

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           <label>Normal</label>
           <div id="normal-energy-value">Energy: 100</div>
           <div id="normal-energy-bar"></div>
+          <!-- adding a spacer -->
+          <div class="status-block empty-placeholder"></div>
         </div>
         
         <div class="energy-block">
