feedback capped on 30vh on mobile

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   
     <div class="footer-bottom">
       <p>With thanks to Michael and Eric — your belief shaped this system more than you'll know.</p>
-      <p class="footer-signoff">Type and Interaction | Capstone 2025&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Signing out, Sham</p>
+      <p class="footer-signoff">Type and Interaction | Capstone 2025&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;Signing out, Sham</p>
     </div>
   </footer>
   
