responsive: made energy bars side by side

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   <!-- HEADLINE -->
   <header>
     <h1>Same tasks. Different toll.</h1>
-    <p>Experience what daily life feels like with Type 1 Diabetes.</p>
+    <p>Experience what daily life feels like with Type 1 Diabetes. 
+      Click on a daily task and find out.</p>
   </header>
 
   <!-- ENERGY DISPLAY -->
